-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0, Lustre 2.12.4
-
RHEL 8.1 client + RHEL 7.7 server with 4 MDTs
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/3b321cac-3bd4-11ea-b1e8-52540065bddc
test_65i failed with the following error:
trevis-13vm1 crashed during sanity test_65i
Console long on client trevis-13vm1:
[ 7945.095033] Lustre: DEBUG MARKER: == sanity test 65i: various tests to set root directory striping ===================================== 23:13:26 (1579389206) [ 7945.472921] BUG: unable to handle kernel paging request at 0000050ea002c009 [ 7945.473832] PGD 0 P4D 0 [ 7945.474130] Oops: 0000 [#1] SMP PTI [ 7945.474516] CPU: 0 PID: 19467 Comm: lfs Kdump: loaded Tainted: G OE --------- - - 4.18.0-147.3.1.el8_1.x86_64 #1 [ 7945.475704] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 [ 7945.476360] RIP: 0010:mdc_read_page+0x14f/0x9b0 [mdc] [ 7945.476894] Code: 4a 05 d7 48 8b 54 24 08 b9 01 00 00 00 4c 89 f7 48 8d 74 24 28 49 89 c7 e8 0e 3d 03 d7 85 c0 0f 8e a8 03 00 00 48 8b 44 24 28 <48> 8b 50 08 48 8d 4a ff 83 e2 01 48 0f 45 c1 f0 ff 40 34 4c 89 f7 [ 7945.478771] RSP: 0018:ffffaa65404dbb48 EFLAGS: 00010002 [ 7945.479325] RAX: 0000050ea002c001 RBX: ffff9b4a83537200 RCX: 0000000000000000 [ 7945.480075] RDX: 0000000000000001 RSI: ffffaa65404dbae8 RDI: 000000000000003e [ 7945.480801] RBP: 0000000000000000 R08: 0000000000000000 R09: 0000000000000000 [ 7945.481536] R10: ffff9b4a84ed8248 R11: 0000050ea002c001 R12: ffff9b4aaf97e000 [ 7945.482274] R13: ffff9b4a5d39f408 R14: ffff9b4a791a8788 R15: 0000000000000202 [ 7945.483016] FS: 00007f35750f70c0(0000) GS:ffff9b4abfc00000(0000) knlGS:0000000000000000 [ 7945.483842] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033 [ 7945.484451] CR2: 0000050ea002c009 CR3: 0000000061348003 CR4: 00000000000606f0 [ 7945.485192] Call Trace: [ 7945.485529] lmv_striped_read_page.isra.41+0x3e2/0xd30 [lmv] [ 7945.486144] lmv_read_page+0x232/0x2d0 [lmv] [ 7945.486688] ll_get_dir_page+0x102/0x160 [lustre] [ 7945.487230] ? ll_md_need_convert+0x1a0/0x1a0 [lustre] [ 7945.487791] ll_dir_read+0xad/0x320 [lustre] [ 7945.488269] ? ll_prep_md_op_data+0x221/0x580 [lustre] [ 7945.488829] ll_iterate+0x1c6/0x630 [lustre] [ 7945.489319] iterate_dir+0x13c/0x190 [ 7945.489749] ksys_getdents64+0x9c/0x130 [ 7945.490186] ? iterate_dir+0x190/0x190 [ 7945.490592] __x64_sys_getdents64+0x16/0x20 [ 7945.491062] do_syscall_64+0x5b/0x1b0 [ 7945.491498] entry_SYSCALL_64_after_hwframe+0x65/0xca [ 7945.492068] RIP: 0033:0x7f3573b7bb2b [ 7945.492459] Code: 00 00 48 83 c4 08 5b 5d c3 66 0f 1f 44 00 00 f3 0f 1e fa 48 8b 47 20 c3 0f 1f 80 00 00 00 00 f3 0f 1e fa b8 d9 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 05 c3 0f 1f 40 00 48 8b 15 29 93 2f 00 f7 d8 [ 7945.494329] RSP: 002b:00007ffcb93be448 EFLAGS: 00000246 ORIG_RAX: 00000000000000d9 [ 7945.495116] RAX: ffffffffffffffda RBX: 000056281c6d2f40 RCX: 00007f3573b7bb2b [ 7945.495856] RDX: 0000000000008000 RSI: 000056281c6d2f70 RDI: 0000000000000005 [ 7945.496596] RBP: 000056281c6d2f70 R08: 00007f35750f70c0 R09: 0000000000000000 [ 7945.497338] R10: 0000000000000001 R11: 0000000000000246 R12: ffffffffffffff80 [ 7945.498079] R13: 0000000000000002 R14: 0000000000000000 R15: 000056281c6caf73 [ 7945.498821] Modules linked in: loop lnet_selftest(OE) lustre(OE) obdecho(OE) mgc(OE) lov(OE) mdc(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache rpcrdma ib_isert iscsi_target_mod ib_iser libiscsi scsi_transport_iscsi ib_srpt target_core_mod ib_srp scsi_transport_srp ib_ipoib rdma_ucm ib_uverbs ib_umad rdma_cm ib_cm iw_cm ib_core sunrpc crct10dif_pclmul crc32_pclmul ghash_clmulni_intel i2c_piix4 pcspkr joydev virtio_balloon ip_tables ext4 mbcache jbd2 ata_generic ata_piix 8139too libata 8139cp crc32c_intel virtio_blk mii serio_raw [ 7945.504703] CR2: 0000050ea002c009
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_65i - trevis-13vm1 crashed during sanity test_65i